--- a/package.json
+++ b/package.json
@@ -9,11 +9,6 @@
     "eject": "react-scripts eject",
     "lint": "eslint . --ext .ts"
   },
-  "jest": {
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ]
-  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.1",
@@ -32,12 +27,7 @@
     "typescript": "^5.0.4",
     "web-vitals": "^3.3.1"
   },
-  "devDependencies": {
-    "@cfaester/enzyme-adapter-react-18": "^0.7.0",
-    "@types/enzyme": "^3.10.13",
-    "enzyme": "^3.11.0",
-    "enzyme-to-json": "^3.6.2"
-  },
+  "devDependencies": {},
   "eslintConfig": {
     "extends": [
       "react-app",
